--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                       <Link to="/">
                           <img src='./images/AlphaBlack.png' class='logo' alt="logo" />
                       </Link>
+                      <!-- This is the greeting -->
                       Hi, I'm Yonga
                   </span>
               </div>
