--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <div class='nav-wrapper'>
                   <span class='item'>
                       <Link to="/">
-                          <img src='./images/AlphaBlack.png' class='logo' alt="logo" />
+                          <img src='/images/AlphaBlack.png' class='logo' alt="logo" />
                       </Link>
                       <!-- This is the greeting -->
                       Hi, I'm Yonga
