--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class='wrapper'>
               <div class='nav-wrapper'>
                   <span class='item'>
-                          <img src='./images/AlphaBlack.png' class='logo' alt="logo" />
+                          <img src='/images/AlphaBlack.png' class='logo' alt="logo" />
                       <!-- This is the greeting -->
                       Hi, I'm Yonga
                   </span>
@@ -51,7 +51,7 @@
       </div>
       <div class="landing-left">
         <div class="landing-left-wrapper">
-        <img src='/images//selected.jpeg' class='landing-img' alt=" Yonela Johannes" />
+        <img src='/images/selected.jpeg' class='landing-img' alt=" Yonela Johannes" />
           <h1 class="landing-name">YONELA JOHANNES</h1>
           <div class="landing-title">
             <div class="landing-title-wrapper">
