--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yonela Johannes</title>
-  <link rel="icon" type="image/svg+xml" href="./images/AlphaWhite.png" />
+  <link rel="icon" type="image/svg+xml" href="AlphaWhite.png" />
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
 </head>
@@ -16,7 +16,7 @@
           <div class='wrapper'>
               <div class='nav-wrapper'>
                   <span class='item'>
-                          <img src='images/AlphaBlack.png' class='logo' alt="logo" />
+                          <img src='AlphaBlack.png' class='logo' alt="logo" />
                       <!-- This is the greeting -->
                       Hi, I'm Yonga
                   </span>
@@ -51,7 +51,7 @@
       </div>
       <div class="landing-left">
         <div class="landing-left-wrapper">
-        <img src='images/selected.jpeg' class='landing-img' alt=" Yonela Johannes" />
+        <img src='selected.jpeg' class='landing-img' alt=" Yonela Johannes" />
           <h1 class="landing-name">YONELA JOHANNES</h1>
           <div class="landing-title">
             <div class="landing-title-wrapper">
